Fix layout issues with inline forms on Company, Deal and Contact sidebar pages. Inputs are bordered and stacked correctly.

--- a/app/stylesheets/forms/_leads.scss
+++ b/app/stylesheets/forms/_leads.scss
@@ -11,7 +11,7 @@
 }
 
 .selector{
-  display: inline-block;
+  margin-top: 5px;
 }
 
 .leads-view{
