--- a/app/stylesheets/routes/_company.scss
+++ b/app/stylesheets/routes/_company.scss
@@ -75,10 +75,6 @@
     input{
       margin-bottom: 0;
     }
-
-    input.zip{
-      margin-top: 10px;
-    }
   }
 
   .meta {
