--- a/app/stylesheets/routes/_contact.scss
+++ b/app/stylesheets/routes/_contact.scss
@@ -17,10 +17,6 @@
     input{
       margin-bottom: 0;
     }
-
-    input.zip{
-      margin-top: 10px;
-    }
   }
 
   span.empty{
@@ -41,10 +37,6 @@
 
   hr{
     margin: 10px 2px 10px 2px;
-  }
-
-  input{
-    padding-left: 0;
   }
 
   .phone,
@@ -88,8 +80,6 @@
     position: relative;
 
     > div{
-      @include display-box;
-      @include box-pack(justify);
       position: relative;
     }
   }
